# xTGSorry

./: .gitignore  config.py  const.py  main.py  pyproject.toml  update.py  utils.py
bot/: controller.py  decorators.py
bot/commands/: telegram_bot_create.py  telegram_bot_ping.py  telegram_bot_restart.py  telegram_bot_start.py  telegram_bot_stop.py  telegram_bot_update.py
models/: usermodel.py
user/: controller.py  decorators.py  filters.py  methods.py
user/commands/: __init__.py  telegram_user_alias.py  telegram_user_chats.py  telegram_user_commands.py  telegram_user_deletter.py  telegram_user_help.py  telegram_user_ignore.py  telegram_user_info.py  telegram_user_message.py  telegram_user_ping.py  telegram_user_prefix.py  telegram_user_push.py  telegram_user_rank.py  telegram_user_root.py  telegram_user_save.py  telegram_user_server.py  telegram_user_status.py  telegram_user_template.py  telegram_user_trigger.py  telegram_user_trusted.py
user/manager/: template.py  trigger.py  user.py
views/: account.py  connection.py
